--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.datasource.username=root
 spring.datasource.password=admin
 
 my.app.jwtSecret=yildirim2189
-my.app.jwtExpirationMs=600000
+my.app.jwtExpirationMs=6000000
 # 86400000
 
 
