--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.0.1",
-    "@angular/cdk": "~8.2.3",
-    "@angular/common": "~8.0.1",
-    "@angular/compiler": "~8.0.1",
-    "@angular/core": "~8.0.1",
-    "@angular/flex-layout": "8.0.0-beta.27",
-    "@angular/forms": "~8.0.1",
-    "@angular/material": "^8.2.3",
-    "@angular/platform-browser": "~8.0.1",
-    "@angular/platform-browser-dynamic": "~8.0.1",
-    "@angular/router": "~8.0.1",
+    "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.1",
+    "@angular/common": "^9.1.0",
+    "@angular/compiler": "^9.1.0",
+    "@angular/core": "^9.1.0",
+    "@angular/flex-layout": "9.0.0-beta.29",
+    "@angular/forms": "^9.1.0",
+    "@angular/material": "^9.2.1",
+    "@angular/platform-browser": "^9.1.0",
+    "@angular/platform-browser-dynamic": "^9.1.0",
+    "@angular/router": "^9.1.0",
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^3.4.1",
@@ -30,16 +30,16 @@
     "hammerjs": "^2.0.8",
     "highcharts": "^8.0.4",
     "highcharts-angular": "^2.4.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.5.0",
     "lodash": "^4.17.15",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1"
+    "rxjs": "^6.5.4",
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/cli": "~8.0.4",
-    "@angular/compiler-cli": "~8.0.1",
+    "@angular-devkit/build-angular": "^0.901.3",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "~8.0.1",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
@@ -56,6 +56,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "typescript": "~3.7.5"
   }
 }
